--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,8 @@
 .AppleDouble
 .LSOverride
 
-# Icon must end with two \r
+# Icon must end with two
 Icon
-
 
 # Thumbnails
 ._*
@@ -27,11 +26,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-### macOS Patch ###
-# iCloud generated files
-*.icloud
-
-### Swift ###
+### Xcode ###
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
@@ -56,38 +51,20 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 
-## Obj-C/Swift specific
-*.hmap
-
-## App packaging
-*.ipa
-*.dSYM.zip
-*.dSYM
-
-### SwiftPackageManager ###
-Packages
-xcuserdata
-*.xcodeproj
-
-### Xcode ###
-
-## Xcode 8 and earlier
-
 ### Xcode Patch ###
 *.xcodeproj/*
 !*.xcodeproj/project.pbxproj
 !*.xcodeproj/xcshareddata/
-!*.xcodeproj/project.xcworkspace/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
-**/xcshareddata/WorkspaceSettings.xcsettings
 
-Keys.xcconfig
-
-### Tuist ###
-XCConfig/*
-!XCConfig/Shared.xcconfig
-Tuist/Dependencies
-Derived/
-*.xcworkspace
+### Projects ###
 *.xcodeproj
+*.xcworkspace
+
+### Tuist derived files ###
+graph.dot
+Derived/
+
+### Tuist managed dependencies ###
+Tuist/.build
